--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FarmFi</title>
+    <title>FarmFi - Smart Farming Solutions</title>
   </head>
   <body>
     <div id="root"></div>
